# institutional-defi-platform-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.worker  LEARNINGS.md  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml  ruff.toml
.claude/: settings.json  settings.local.json
.claude/agents/: test-orchestrator.md
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml  security-scan.yml
alembic/: env.py
alembic/versions/: 2026_03_05_0001-001_initial_schema.py
docs/: deployment-verification.md  eks-deployment.md
kube/base/: kustomization.yaml  namespace.yaml
kube/base/api/: deployment.yaml  external-secret.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
kube/base/worker/: deployment.yaml  hpa.yaml  pdb.yaml  serviceaccount.yaml
kube/overlays/dev/: configmap.yaml  egress.yaml  ingress.yaml  kustomization.yaml
kube/overlays/local/: configmap.yaml  kustomization.yaml  secrets.yaml
kube/overlays/prod/: configmap.yaml  egress.yaml  ingress.yaml  kustomization.yaml
kube/temporal/: values.yaml
scripts/: check-api-contracts.py  export-openapi.py  generate-frontend-types.sh  test-all.sh  verify-contracts-live.py  verify-deployment.sh
src/: config.py  database.py  exceptions.py  main.py  models.py
src/analytics/: __init__.py  drift.py  error_patterns.py  router.py  schemas.py  service.py  utils.py
src/credit/: __init__.py  agents.py  eval.py  rag.py  router.py  schemas.py  service.py  synthesis.py
src/decoder/: __init__.py  config.py  constants.py  exceptions.py  llm_service.py  router.py  schemas.py  service.py
src/defi_risk/: __init__.py  constants.py  router.py  schemas.py  service.py
src/embeddings/: __init__.py  generator.py  graph.py  graph_store.py  models.py  router.py  schemas.py  service.py  store.py
src/features/: __init__.py  config.py  models.py  router.py  schemas.py  service.py
src/jpm_scenarios/: __init__.py  constants.py  router.py  schemas.py  service.py
src/jurisdiction/: __init__.py  conflicts.py  constants.py  evaluator.py  pathway.py  repository.py  resolver.py  router.py  schemas.py  service.py
src/ke/: __init__.py  router.py  schemas.py  service.py
src/market_risk/: __init__.py  constants.py  router.py  schemas.py  service.py
src/middleware/: __init__.py  audit.py  auth.py  security.py
src/ontology/: __init__.py  instrument.py  jurisdiction.py  relations.py  scenario.py  types.py
src/production/: __init__.py  cache.py  compiler.py  executor.py  optimizer.py  premise_index.py  router.py  schemas.py  service.py  trace.py
src/protocol_risk/: __init__.py  constants.py  router.py  schemas.py  service.py
src/rag/: __init__.py  config.py  corpus_loader.py  router.py  rule_context.py  schemas.py  service.py  utils.py
src/rules/: __init__.py  dependencies.py  event_repository.py  exceptions.py  migration.py  models.py  repository.py  router.py  schemas.py  service.py  version_repository.py
src/technology/: __init__.py  config.py  router.py  schemas.py  service.py
src/telemetry/: __init__.py  config.py  logging.py  metrics.py  tracing.py
src/token_compliance/: __init__.py  router.py  schemas.py  service.py
src/trading/: __init__.py  router.py  schemas.py  service.py
src/verification/: __init__.py  cross_rule.py  embeddings.py  models.py  nli.py  repository.py  router.py  schemas.py  service.py
src/workflows/: __init__.py  activities.py  config.py  credit_decision.py  router.py  schemas.py  service.py  worker.py  workflows.py
terraform/: .terraform.lock.hcl  ecr.tf  eks.tf  elasticache.tf  irsa.tf  outputs.tf  rds.tf  secrets.tf  variables.tf  versions.tf  vpc.tf
terraform/envs/: dev.tfvars  prod.tfvars
tests/: conftest.py  test_analytics.py  test_charts_api.py  test_compiler.py  test_corpus_loader.py  test_decoder.py  test_defi_risk.py  test_embeddings.py  test_ke_api.py  test_ontology.py  test_protocol_risk.py  test_rag.py  test_rules.py  test_rules_api.py  test_runtime.py  test_rwa_rules.py  test_token_compliance.py  test_verification.py  test_verification_api.py
